@@ -1,3 +1,7 @@
+2006-04-14  David Reveman  <davidr@novell.com>
+
+	* plugins/resize.c: Allow 4-way resize. (Mike Hearn)
+
 2006-04-13  Dan Winship  <danw@novell.com>
 
 	* src/screen.c (panelAction): take a timestamp and pass that to
